[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "authorized-web-data-exporter"
version = "0.1.0"
description = "Generic authorized login-site data exporter with robots.txt inspection, Playwright, checkpointing, and CSV/Excel/JSON/TXT outputs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "GitHub-GPT Developer" }]
dependencies = [
  "beautifulsoup4>=4.12.3",
  "openpyxl>=3.1.5",
  "playwright>=1.46.0",
  "pydantic>=2.8.2",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.2",
  "rich>=13.7.1",
  "tenacity>=8.5.0",
  "typer>=0.12.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.2",
  "types-PyYAML>=6.0.12.20240808"
]

[project.scripts]
web-export = "authorized_web_exporter.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "SIM"]
ignore = ["E501"]
